--- a/store/templates/category.html
+++ b/store/templates/category.html
@@ -85,7 +85,7 @@
                                             </li>
                                             <li><a href="{% url 'add_to_comparison' product.id %}"><i
                                                     class="icon-shuffle"></i></a></li>
-                                            <li><a href="{% url 'zoom_product' product.id %}" class="popup-ajax"><i
+                                            <li><a href="#" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
                                             <li><a href="{% url 'add_to_wishlist' product.pk %}">
                                                 <i class="icon-heart"></i>
@@ -275,9 +275,9 @@
                                                     <!-- Add this hidden input -->
                                                 </form>
                                             </li>
-                                            <li><a href="{% url 'add_to_comparison' product.id %}"><i
+                                            <li><a href="{% url 'add_to_comparison' p.id %}"><i
                                                     class="icon-shuffle"></i></a></li>
-                                            <li><a href="{% url 'zoom_product' p.id %}" class="popup-ajax"><i
+                                            <li><a href="#" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
                                             <li><a href="{% url 'add_to_wishlist' p.pk %}">
                                                 <i class="icon-heart"></i>
