--- a/store/templates/collection_detail.html
+++ b/store/templates/collection_detail.html
@@ -273,7 +273,7 @@
                                             </li>
                                             <li><a href="{% url 'add_to_comparison' p.id %}"><i
                                                     class="icon-shuffle"></i></a></li>
-                                            <li><a href="{% url 'zoom_product' p.id %}" class="popup-ajax"><i
+                                            <li><a href="#" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
                                             <li><a href="{% url 'add_to_wishlist' p.pk %}">
                                                 <i class="icon-heart"></i>
@@ -323,5 +323,3 @@
 </div>
 
 {% endblock %}
-
-
