--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -130,9 +130,9 @@
                                                     <!-- Add this hidden input -->
                                                 </form>
                                             </li>
-                                            <li><a href="#" class="popup-ajax"><i
+                                            <li><a href="{% url 'add_to_comparison' product.id %}"><i
                                                     class="icon-shuffle"></i></a></li>
-                                            <li><a href="{% url 'zoom_product' product.id %}" class="popup-ajax"><i
+                                            <li><a href="#" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
                                             <li><a href="{% url 'add_to_wishlist' product.pk %}">
                                                 <i class="icon-heart"></i>
