--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -282,7 +282,11 @@
                             {% endif %}
                             <li><a href="/compare"><i class="ti-control-shuffle"></i><span></span></a></li>
                             <li><a href="/wishlist"><i class="ti-heart"></i><span></span></a></li>
-                            <li><a href="/account"><i class="ti-user"></i><span></span></a></li>
+                            <li>
+                                <a href="{% if request.session.user %}/my-account{% else %}/account{% endif %}">
+                                    <i class="ti-user"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
